src/styles/components/_modal.scss
$modal-transition: 0.2s cubic-bezier(0.55, 0, 0.1, 1);

.modal {
  position: fixed;
  inset: 0;
  display: flex;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  transform: scale(1.1);
  visibility: hidden;
  z-index: -1;
  opacity: 0;
  transition: opacity $modal-transition, transform $modal-transition,
    visibility $modal-transition;
  pointer-events: none;
  -ms-overflow-style: none;
  scrollbar-width: none;
  overflow-y: auto;

  &::-webkit-scrollbar {
    display: none;
  }

  &--preload {
    transition: none;
  }

  &.is-active {
    z-index: 1000;
    transform: scale(1);
    visibility: visible;
    opacity: 1;
    transition: opacity $modal-transition, transform $modal-transition;
    pointer-events: auto;
  }
}

.modal__wrapper {
  transform: translateZ(0);
  position: relative;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 100%;
  background: $background-color-modal;
  backdrop-filter: blur(2px);
  padding: 60px 40px;
}

.modal__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.modal__content {
  position: relative;
  display: flex;
}

.modal__close-btn {
  position: absolute;
  top: 15px;
  right: 15px;
  border: none;
  cursor: pointer;
}

